Fri Aug 31 12:52:40 CEST 2007 Jan Kozusznik

	* src/org/jcae/mesh/oemm/OEMM.java: New OEMM.Node.getMaxIndex() and
	OEMM.getDepth() methods.
	* src/org/jcae/mesh/oemm/Storage.java: Implement saveNodes() to store
	modified octants back onto disk.  Add an optional argument to
	loadNodes() to build non-readable triangles.  It is now possible to
	read/modify/store meshes onto disk.

Sun Aug 26 01:46:56 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/MeshOEMMPopulate.java: Run
	RawStorage.countTriangles() to count triangles from new triangle soup.
	Thanks to Jan Kozusznik for the report.

Sun Aug 12 17:18:01 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/AbstractAlgoHalfEdge.java: Fix
	off-by-one error in processAllHalfEdges(), last edge was not processed.
	* src/org/jcae/mesh/amibe/algos3d/SplitEdge.java: Do not implicitly
	multiply edge length by sqrt(2).  Fix checking of too near vertices.

Sat Aug 11 16:27:04 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/SplitEdge.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Modify main
	class arguments.

Sat Aug 11 02:59:10 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3D.java: This class had
	been broken by changes in QSortedTree interface.
	* src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java: New area() and
	checkNewRingNormals() abstract methods.
	* src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java: Rename
	computeArea() into area().
	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3D.java: Works now with
	both HalfEdge and VirtualHalfEdge implementations.

Fri Aug  3 09:14:58 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/bora/xmldata/BModelReader.java
	  src/org/jcae/mesh/bora/xmldata/BModelWriter.java
	  src/org/jcae/mesh/xmldata/jcaebora.dtd: Extend jcaebora.dtd to store